fixed z-index of the editor

--- a/examples/js-edit/css/config.css
+++ b/examples/js-edit/css/config.css
@@ -57,3 +57,7 @@ cursor: not-allowed;
 #jsedit-config .jsedit-editor.disabled .ace_cursor {
   display: none;
 }
+
+#jsedit-config .ace_gutter {
+  z-index :auto;
+}
